# mongoschema

./: Cargo.toml  Dockerfile.testrunner  README.md  compose_env.yaml  test_mongoschema.yaml
.github/workflows/: test.yml
resources/: prepare_mongo.sh
src/lib/: create.rs  lib.rs  list.rs  mongo.rs  utils.rs
