[package]
name = "mongoschema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "mongoschema_impl"
path = "src/lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "mongoschema"
path = "src/bin/main.rs"


[dependencies]
env_logger = "0.11.1"
log = "0.4.19"
mongodb = "2.8.0"
regex = "1.9.1"
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
